# qtile

./: .gitignore  autostart.sh  config.py  pyproject.toml
config_qtile/: config_groups.py
config_qtile/theme/: base.py  gruvbox.py  theme_model.py
config_qtile/theme/presets/: catppuccin.json  dark.json  gruvbox.json  layouts.json  tokyonight.json  widgets.json
config_qtile/theme/settings_json/: bar.json  base.json  layouts.json  screen.json  widgets.json
settings/: __init__.py  autostart.py  bar.py  base_factory.py  groups.py  keys.py  layouts.py  path.py  scr.py  screens.py  theme_controller.py  widgets.py
